fix(css): tooltip shadow with more contrast (#2858)

--- a/src/app/feature-flag/notification-footer/feature-footer.component.less
+++ b/src/app/feature-flag/notification-footer/feature-footer.component.less
@@ -15,8 +15,8 @@
   border-radius: 50%;
   color: @color-for-feature;
   text-align: center;
-  background: @color-pf-black-100;
-  box-shadow: 0 0 3px @color-pf-black-600;
+  background: @color-pf-white;
+  box-shadow: 0 2px 4px @color-pf-black-500;
   font-size: 20px;
   font-weight: 700;
   float: right;
@@ -28,10 +28,11 @@
 
 f8-feature-footer .tooltip-inner {
   width: 20em;
-  background: @color-pf-black-150;
+  background: @color-pf-white;
+  text-align: left;
   color: @color-pf-black-600;
   border-color: @color-pf-black-700;
-  box-shadow: 0 0 3px @color-pf-black-600;
+  box-shadow: 0 6px 10px @color-pf-black-400;
   ul {
     list-style: none;
     list-style-type: none;
